# apertium-ita-por

./: .gitattributes  Makefile.am  README  apertium-ita-por.por.dix  configure.ac  modes.xml
